--- a/src/phtml/hiddeninput.phtml
+++ b/src/phtml/hiddeninput.phtml
@@ -1,7 +1,1 @@
-<input type="hidden" 
-           class="<?= $this->class ?>" 
-           value="<?= $this->value; ?>" 
-           name="<?= $this->name ?>" 
-           data-on-document-ready="" 
-           <?= $this->customAttr ?> 
-    >
+<input type="hidden" class="<?= $this->class ?>" value="<?= $this->value; ?>" name="<?= $this->name ?>" data-on-document-ready="" <?= $this->customAttr ?> >
