--- a/src/phtml/iconbutton.phtml
+++ b/src/phtml/iconbutton.phtml
@@ -1,6 +1,3 @@
-<a 
-    class="<?= $this->class ?> has-ripple-effect"
-    <?= $this->customAttr ?>
->
-<i class="material-icons"><?= $this->iconName ?></i>
+<a class="<?= $this->class ?> has-ripple-effect"<?= $this->customAttr ?> >
+    <i class="material-icons"><?= $this->iconName ?></i>
 </a>
