--- a/src/phtml/inlineoverlay.phtml
+++ b/src/phtml/inlineoverlay.phtml
@@ -1,7 +1,1 @@
-<div
-        id="inlineOverlay"
-        class="inline-overlay-wrapper <?= $this->class ?>"
-        data-on-document-changed="initInlineOverlay"
->
-<!-- dynamic inline overlay content | only include this once in a page -->
-</div>
+<div id="inlineOverlay" class="inline-overlay-wrapper <?= $this->class ?>" data-on-document-changed="initInlineOverlay"></div>
