--- a/src/phtml/button.phtml
+++ b/src/phtml/button.phtml
@@ -1,9 +1,5 @@
-<a 
-    class="<?= $this->class ?>"
-    data-on-document-ready="requestResponseToContent"
-    <?= $this->customAttr ?>
->
-<? foreach ($this->getElements() as $ele ) { ?>
+<a class="<?= $this->class ?>" data-on-document-ready="requestResponseToContent" <?= $this->customAttr ?>>
+    <? foreach ($this->getElements() as $ele ) { ?>
     <?= $ele->getHtml(); ?>
-<? } ?>
+    <? } ?>
 </a>
