--- a/src/phtml/checkinput.phtml
+++ b/src/phtml/checkinput.phtml
@@ -1,15 +1,12 @@
-<span 
-    class="<?= $this->wrapper_class ?>" 
-    data-on-document-ready=""
-    >
+<span class="<?= $this->wrapper_class ?>" data-on-document-ready="">
     <label>
-        <input class="<?= $this->class ?>" type="checkbox" name="<?= $this->name ?>" <?= $this->customAttr ?> <?= ($this->checked?' checked="checked"':'') ?>>
+        <input class="<?= $this->class ?>" type="checkbox" name="<?= $this->name ?>" <?= $this->customAttr ?> <?= ($this->checked ? ' checked="checked"' : '') ?>>
         <span></span>
     </label>
     <label class="active label">
         <? foreach ($this->getElements() as $obj) { ?>
         <?= $obj->getHtml(); ?>
         <? } ?>
-        <?= ($this->required==true?' *':'') ?>
+        <?= ($this->required == true ? ' *' : '') ?>
     </label>
 </span>
