--- a/src/phtml/selectinput.phtml
+++ b/src/phtml/selectinput.phtml
@@ -1,15 +1,15 @@
 <span 
     class="<?= $this->wrapper_class ?> styled-select" 
-    data-on-document-ready="select_js_all<?=($this->customEvent!=''?$this->customEvent:'')?>"
+    data-on-document-ready="select_js_all<?= property_exists($this, 'customEvent') ? $this->customEvent : "" ?>"
     >
     <select class="modern_select select-js select-js-all<?= $this->class ?>" name="<?= $this->name ?>"  <?= $this->customAttr ?>>
         <? foreach ($this->options as $key => $value) { ?>
-        <option <?= (in_array($key, $this->selected)?' selected="selected"':'') ?> value="<?= $key ?>"><?= $value ?></option>
+        <option <?= (in_array($key, $this->selected) ? ' selected="selected"' : '') ?> value="<?= $key ?>"><?= $value ?></option>
         <? } ?>
     </select>
     <i class="material-icons">keyboard_arrow_down</i>
     <label><? foreach ($this->getElements() as $obj) { ?>
-            <?= $obj->getHtml(); ?>
+        <?= $obj->getHtml(); ?>
         <? } ?>
-        <?= ($this->required==true?' *':'') ?></label>
+        <?= ($this->required == true ? ' *' : '') ?></label>
 </span>
