--- a/src/phtml/textinput.phtml
+++ b/src/phtml/textinput.phtml
@@ -1,17 +1,34 @@
 <div 
     class="<?= $this->wrapper_class ?>" 
-    data-on-document-ready="<?= $this->wrapper_class ?>_focusEffect<?= ($this->required?','.$this->wrapper_class.'_required':'') ?>">
+    data-on-document-ready="<?= $this->wrapper_class ?>_focusEffect<?= ($this->required ? ',' . $this->wrapper_class . '_required' : '') ?>">
     <input class="<?= $this->class ?>"
            type="text" 
            value="<?= $this->value; ?>" 
-           placeholder="<?= $this->placeholder ?>" 
+           placeholder="<?= property_exists($this, 'placeholder') ? $this->placeholder : "" ?>" 
            name="<?= $this->name ?>" 
            <?= $this->customAttr ?> 
-    >
+           >
     <label class="active">
         <? foreach ($this->getElements() as $obj) { ?>
-            <?= $obj->getHtml(); ?>
+        <?= $obj->getHtml(); ?>
         <? } ?>
-        <?= ($this->required==true?' *':'') ?>
+        <?= ($this->required == true ? ' *' : '') ?>
+    </label>
+</div>
+<div 
+    class="<?= $this->wrapper_class ?>" 
+    data-on-document-ready="<?= $this->wrapper_class ?>_focusEffect<?= ($this->required ? ',' . $this->wrapper_class . '_required' : '') ?>">
+    <input class="<?= $this->class ?>"
+           type="text" 
+           value="<?= $this->value; ?>" 
+           placeholder="<?= property_exists($this, 'placeholder') ? $this->placeholder : "" ?>" 
+           name="<?= $this->name ?>" 
+           <?= $this->customAttr ?> 
+           >
+    <label class="active">
+        <? foreach ($this->getElements() as $obj) { ?>
+        <?= $obj->getHtml(); ?>
+        <? } ?>
+        <?= ($this->required == true ? ' *' : '') ?>
     </label>
 </div>
