--- a/src/css/template_button.css
+++ b/src/css/template_button.css
@@ -1,33 +1,32 @@
-.template_button, .template_submit {
-    line-height:36px;
-    display:inline-block;
-    height:36px;
-    padding:0 2rem;
-    vertical-align:middle;
-    text-transform:uppercase;
-    border:none;
-    border-radius:4px;
-    font-size:14px;
-    outline:0;
+.template_button, .template_submit, .td .template_button, .td .template_submit {
+    line-height: 36px;
+    display: inline-block;
+    height: 36px;
+    padding: 0 2rem;
+    vertical-align: middle;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 4px;
+    font-size: 14px;
+    outline: 0;
 
-    cursor:pointer;
-    -webkit-transition:background-color .2s ease-out;
-    transition:background-color .2s ease-out;
-    text-align:center;
-    text-decoration:none;
-    letter-spacing:.5px;
-    color:#fff;
-    background-color:rgba(82,134,186,1);
+    cursor: pointer;
+    -webkit-transition: background-color .2s ease-out;
+    transition: background-color .2s ease-out;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: .5px;
+    color: #fff;
+    background-color: rgba(82, 134, 186, 1);
 }
 
 
-
-.template_button:focus, .template_submit:focus {
-    background-color:rgba(82,134,186,0.8);
+.template_button:focus, .template_submit:focus, .td .template_button:focus, .td .template_submit:focus {
+    background-color: rgba(82, 134, 186, 0.8);
 }
 
-.template_button:hover, .template_submit:hover {
-    background-color:rgba(82,134,186,0.8);
-    color:#fff;
-    line-height:36px;
+.template_button:hover, .template_submit:hover, .td .template_button:hover, .td .template_submit:hover {
+    background-color: rgba(82, 134, 186, 0.8);
+    color: #fff;
+    line-height: 36px;
 }
