--- a/src/phtml/datepicker.phtml
+++ b/src/phtml/datepicker.phtml
@@ -1,5 +1,5 @@
 <div class="page-overlay">
-    <div id="datePickerWrapper" class="<?= $this->class ?>"  <?= $this->customAttr ?>
+    <div id="datePickerWrapper" class="<?php echo $this->class ?>"  <?php echo $this->customAttr ?>
          data-on-document-changed="initDatumInputEvent">
         <div class="date-picker-wrapper">
             <div class="date-picker-left">Kalender</div>
