--- a/src/phtml/datuminput.phtml
+++ b/src/phtml/datuminput.phtml
@@ -1,7 +1,5 @@
-<span 
-    class="<?= $this->wrapper_class ?>"
-    >
-    <input  class="<?= $this->class ?> has-datepicker"  type="text" name="<?= $this->name ?>" value="<?= $this->value ?>"  maxlength="10" <?= $this->customAttr ?> readonly="readonly"/>
+<span class="<?php echo $this->wrapper_class ?>">
+    <input  class="<?php echo $this->class ?> has-datepicker"  type="text" name="<?php echo $this->name ?>" value="<?php echo $this->value ?>"  maxlength="10" <?php echo $this->customAttr ?> readonly="readonly"/>
     <!--i class="material-icons">date_range</i-->
-     <label class="active"><?= $this->label ?></label>
+    <label class="active"><?php echo $this->label ?></label>
 </span>
