--- a/src/phtml/hiddeninput.phtml
+++ b/src/phtml/hiddeninput.phtml
@@ -1,1 +1,1 @@
-<input type="hidden" class="<?= $this->class ?>" value="<?= $this->value; ?>" name="<?= $this->name ?>" data-on-document-ready="" <?= $this->customAttr ?> >
+<input type="hidden" class="<?php echo $this->class ?>" value="<?php echo $this->value; ?>" name="<?php echo $this->name ?>" data-on-document-ready="" <?php echo $this->customAttr ?> >
