--- a/src/phtml/icon.phtml
+++ b/src/phtml/icon.phtml
@@ -1,1 +1,1 @@
-<i class="material-icons <?= $this->class ?>"><?= $this->iconName ?></i>
+<i class="material-icons <?php echo $this->class ?>"><?php echo $this->iconName ?></i>
