--- a/src/phtml/inlineoverlay.phtml
+++ b/src/phtml/inlineoverlay.phtml
@@ -1,1 +1,1 @@
-<div id="inlineOverlay" class="inline-overlay-wrapper <?= $this->class ?>" data-on-document-changed="initInlineOverlay"></div>
+<div id="inlineOverlay" class="inline-overlay-wrapper <?php echo $this->class ?>" data-on-document-changed="initInlineOverlay"></div>
