--- a/src/phtml/radioinput.phtml
+++ b/src/phtml/radioinput.phtml
@@ -1,9 +1,6 @@
-<span 
-    class="<?= $this->wrapper_class ?>" 
-    data-on-document-ready=""
-    >
+<span class="<?php echo $this->wrapper_class ?>" data-on-document-ready="">
     <label>
-        <input class="<?= $this->class ?>" type="checkbox" name="<?= $this->name ?>" <?= $this->customAttr ?>>
-        <span><?= $this->label; ?></span>
+        <input class="<?php echo $this->class ?>" type="checkbox" name="<?php echo $this->name ?>" <?php echo $this->customAttr ?>>
+        <span><?php echo $this->label; ?></span>
     </label>
 </span>
