--- a/src/phtml/sorts.phtml
+++ b/src/phtml/sorts.phtml
@@ -1,4 +1,4 @@
-<span class="<?= $this->class ?> sorts hide-on-medium-and-down">
+<span class="<?php echo $this->class ?> sorts hide-on-medium-and-down">
     <a class="sort sort-toggle" data-sort="none" href="javascript:void(0);">
         <i class="sort-asc material-icons">arrow_drop_up</i>
         <i class="sort-desc material-icons">arrow_drop_down</i>
