--- a/src/phtml/text.phtml
+++ b/src/phtml/text.phtml
@@ -1,1 +1,1 @@
-<span class="<?= $this->class ?>" <?= $this->customAttr ?>><?= $this->text ?></span>
+<span class="<?php echo $this->class ?>" <?php echo $this->customAttr ?>><?php echo $this->text ?></span>
