--- a/src/phtml/timepicker.phtml
+++ b/src/phtml/timepicker.phtml
@@ -1,5 +1,5 @@
 <div class="page-overlay">
-    <div id="timePickerWrapper" class="<?= $this->class ?>"  <?= $this->customAttr ?>
+    <div id="timePickerWrapper" class="<?php echo $this->class ?>"  <?php echo $this->customAttr ?>
          data-on-document-changed="initTimeInputEvent">
         <div class="time-picker-wrapper">
             <div class="time-picker-left">Uhrzeit</div>
