--- a/src/phtml/breadcrumbs.phtml
+++ b/src/phtml/breadcrumbs.phtml
@@ -1,5 +1,5 @@
-<div id="<?= $this->id ?>" class="<?= $this->class ?>" <?= $this->customAttr ?>>
-    <? foreach ($this->getElements() as $obj) { ?>
-    <?= $obj->getHtml(); ?>
-    <? } ?>
+<div id="<?php echo $this->id ?>" class="<?php echo $this->class ?>" <?php echo $this->customAttr ?>>
+    <?php foreach ($this->getElements() as $obj) { ?>
+        <?php echo $obj->getHtml(); ?>
+    <?php } ?>
 </div>
