--- a/src/phtml/html.phtml
+++ b/src/phtml/html.phtml
@@ -1,3 +1,3 @@
-<div class="<?= $this->class ?>" <?= $this->customAttr ?>>
-    <?= $this->html ?>
+<div class="<?php echo $this->class ?>" <?php echo $this->customAttr ?>>
+    <?php echo $this->html ?>
 </div>
