--- a/src/phtml/iconbutton.phtml
+++ b/src/phtml/iconbutton.phtml
@@ -1,3 +1,3 @@
-<a class="<?= $this->class ?> has-ripple-effect"<?= $this->customAttr ?> >
-    <i class="material-icons"><?= $this->iconName ?></i>
+<a class="<?php echo $this->class ?> has-ripple-effect"<?php echo $this->customAttr ?> >
+    <i class="material-icons"><?php echo $this->iconName ?></i>
 </a>
