--- a/src/phtml/progressbar.phtml
+++ b/src/phtml/progressbar.phtml
@@ -1,3 +1,3 @@
-<div id="<?= $this->id ?>" class="<?= $this->class ?>">
+<div id="<?php echo $this->id ?>" class="<?php echo $this->class ?>">
     <div></div>
 </div>
