--- a/src/phtml/table.phtml
+++ b/src/phtml/table.phtml
@@ -1,85 +1,87 @@
 
-<div class="<?= $this->class ?>" data-on-document-ready="tableSearch<?=((count($this->filter)>0)?',tableFilter':'')?><?=($this->sortable?',tableSortable':'')?>,frozeHead" <?= $this->customAttr ?>>
+<div class="<?php echo $this->class ?>" data-on-document-ready="tableSearch<?php echo ((count($this->filter) > 0) ? ',tableFilter' : '') ?><?php echo ($this->sortable ? ',tableSortable' : '') ?>,frozeHead" <?php echo $this->customAttr ?>>
 
     <div class="section">
-        <? if (count($this->filter)>0) { ?>
-        <div class="section-left">
-            <div id="filter_<?= $this->name ?>" class="filter-list">
-                <span class="title"><?= _FILTER_ ?></span>
-                <ul>
-                    <? foreach ($this->filter as $filter) { ?>
-                        <li>
-                            <?= $filter->getHtml() ?>
-                        </li>
-                    <? } ?>
-                </ul>
+        <?php if (count($this->filter) > 0) { ?>
+            <div class="section-left">
+                <div id="filter_" class="filter-list">
+                    <span class="title">FIlter</span>
+                    <ul>
+                        <?php foreach ($this->filter as $filter) { ?>
+                            <li>
+                                <?php echo $filter->getHtml() ?>
+                            </li>
+                        <?php } ?>
+                    </ul>
+                </div>
+                <div class="filter-overlay"></div>
             </div>
-            <div class="filter-overlay"></div>
-        </div>
-        <? } ?>
-        
-        <div class="section-right<?=(count($this->filter)>0?'':' ohne_filter')?>">
+        <?php } ?>
+
+        <div class="section-right<?php echo (count($this->filter) > 0 ? '' : ' ohne_filter') ?>">
             <div class="dtable-header">
-                
-                <? if (($this->search && $this->search_tooltip) || count($this->filter)>0) { ?>
-                    <div class="table-search <?=($this->search?' search':'')?><?=(count($this->filter)>0?' filter':'')?>">
-                        <? if (count($this->filter)>0) { ?>
-                        <a href="#" class="filter-trigger" data-on-document-ready="tableFilterTrigger"><i class="material-icons">filter_list</i></a>
-                        <? } ?>
-                        <? if ($this->search) { ?>
-                       <!-- <i class="material-icons search-icon">search</i> -->
-                        <?= ($this->search_tooltip?$this->search_tooltip->getHtml():'') ?>
-                        <input type="text" placeholder="<?= _SUCHE_ ?>" >
-                          <? } ?>
+
+                <?php if (($this->search && $this->search_tooltip) || count($this->filter) > 0) { ?>
+                    <div class="table-search <?php echo ($this->search ? ' search' : '') ?><?php echo (count($this->filter) > 0 ? ' filter' : '') ?>">
+                        <?php if (count($this->filter) > 0) { ?>
+                            <a href="#" class="filter-trigger" data-on-document-ready="tableFilterTrigger"><i class="material-icons">filter_list</i></a>
+                        <?php } ?>
+                        <?php if ($this->search) { ?>
+                           <!-- <i class="material-icons search-icon">search</i> -->
+                            <?php echo ($this->search_tooltip ? $this->search_tooltip->getHtml() : '') ?>
+                            <input type="text" placeholder="Search" >
+                        <?php } ?>
                     </div>
-              <? } ?>
+                <?php } ?>
             </div>
 
 
-            <div class="dtable-wrapper<?= ((($this->search && $this->search_tooltip) || count($this->filter)>0)?'':' ohne_suche') ?>" data-on-document-ready="tableSort,tableWidthInit,tableContentExpandInit">
-                <table class="table-ignore2 dtable <?= ($this->bordered ? 'bordered ' : '') ?><?= ($this->hover ? 'hover ' : '') ?>">
-               
-                        <tr class="drow drow-header hide-on-medium-and-down<?=($this->sortable?' notsortable':'')?>">    
-                            <td class="drow2 collapsed-more collapsed_trigger">
-                                <div class="dcol th">
-                                    <a href="javascript:void(0);"></a>
-                                </div>
-                            </td>
-                            
-                            <? if ($this->sortable) { ?>
+            <div class="dtable-wrapper<?php echo ((($this->search && $this->search_tooltip) || count($this->filter) > 0) ? '' : ' ohne_suche') ?>" data-on-document-ready="tableSort,tableWidthInit,tableContentExpandInit">
+                <table class="table-ignore2 dtable <?php echo ($this->bordered ? 'bordered ' : '') ?><?php echo ($this->hover ? 'hover ' : '') ?>">
+
+                    <tr class="drow drow-header hide-on-medium-and-down<?php echo ($this->sortable ? ' notsortable' : '') ?>">    
+                        <td class="drow2 collapsed-more collapsed_trigger">
+                            <div class="dcol th">
+                                <a href="javascript:void(0);"></a>
+                            </div>
+                        </td>
+
+                        <?php if ($this->sortable) { ?>
                             <td class="drow2 sortable collapsed-more">
                                 <div class="dcol th">
                                     <a href="javascript:void(0);"></a>
                                 </div>
                             </td>   
-                            <? } ?>
-                            <? 
-                            foreach ($this->getElements()[0]->getElements() as $col) { ?>
-                                <td class="drow2" data-name="<?= $col->name ?>">
-
+                        <?php } ?>
+                        <?php foreach ($this->getElements()[0]->getElements() as $col) { ?>
+                            <td class="drow2" data-name="<?php echo $col->name ?>">
                                 <div class="dcol th">
-                                    <? foreach ($col->getElements() as $bez => $obj) { ?>
-                                            <?= $obj->getHtml() ?>
-                                    <? } ?>
+                                    <?php foreach ($col->getElements() as $bez => $obj) { ?>
+                                        <?php echo $obj->getHtml() ?>
+                                    <?php } ?>
                                 </div>
-                                </td>
-                            <? } ?>
-                        </tr>
+                            </td>
+                        <?php } ?>
+                    </tr>
 
-                        <? foreach ($this->getElements() as $i => $row) { ?>
-                            <? if ($i==0) { continue; } ?>
-                            <tr class="drow" data-row-zaehler="<?= $i ?>" <?=$row->customAttr?>>
-                                <td class="drow2 collapsed-more hide-on-medium-and-down collapsed_trigger">
-                                    <div class="dcol">
-                                        <?php
-                                        $iconButton = new hoalzein\Prof4Net\Html\Elements\IconButton;
-                                        $iconButton->setIconName('add_circle_outline');
-                                        $iconButton->addCustomClass('content_expand');
-                                        echo $iconButton->getHtml()
-                                        ?>
-                                    </div>
-                                </td>
-                                <? if ($this->sortable) { ?>
+                    <?php foreach ($this->getElements() as $i => $row) { ?>
+                        <?php
+                        if ($i == 0) {
+                            continue;
+                        }
+                        ?>
+                        <tr class="drow" data-row-zaehler="<?php echo $i ?>" <?php echo $row->customAttr ?>>
+                            <td class="drow2 collapsed-more hide-on-medium-and-down collapsed_trigger">
+                                <div class="dcol">
+                                    <?php
+                                    $iconButton = new hoalzein\Prof4Net\Html\Elements\IconButton;
+                                    $iconButton->setIconName('add_circle_outline');
+                                    $iconButton->addCustomClass('content_expand');
+                                    echo $iconButton->getHtml()
+                                    ?>
+                                </div>
+                            </td>
+                            <?php if ($this->sortable) { ?>
                                 <td class="drow2 collapsed-more hide-on-medium-and-down">
                                     <div class="dcol">
                                         <?php
@@ -90,19 +92,25 @@
                                         ?>
                                     </div>
                                 </td>
-                                <? } ?>
-                                <? foreach ($row->getElements() as $z => $col) { ?>
-                                    <td class="drow2" data-name="<?= $col->name ?>">
-                                            <div class="hide-on-large-and-up dcol th"><?= $this->getElements()[0]->getElements()[$z]->getElements()[0]->getHtml() ?></div>
-                                            <div class="dcol td"><? foreach ($col->getElements() as $obj) { ?><?= $obj->getHtml() ?><? } ?></div>
-                                   </td>
-                                <? } ?>
-                             </tr>
-                        <? } ?>
+                            <?php } ?>
+                            <?php foreach ($row->getElements() as $z => $col) { ?>
+                                <td class="drow2" data-name="<?php echo $col->name ?>">
+                                    <div class="hide-on-large-and-up dcol th"><?php echo $this->getElements()[0]->getElements()[$z]->getElements()[0]->getHtml() ?></div>
+                                    <div class="dcol td">
+                                        <?php
+                                        foreach ($col->getElements() as $obj) {
+                                            echo $obj->getHtml();
+                                        }
+                                        ?>
+                                    </div>
+                                </td>
+                            <?php } ?>
+                        </tr>
+                    <?php } ?>
                 </table>
-                 <? if ($this->sortable) { ?>
-                    <div class="sortable_href" data-href="<?= $this->sortable ?>" ></div>
-                <? } ?>
+                <?php if ($this->sortable) { ?>
+                    <div class="sortable_href" data-href="<?php echo $this->sortable ?>" ></div>
+                <?php } ?>
             </div> 
         </div>
     </div>
