--- a/src/phtml/textarea.phtml
+++ b/src/phtml/textarea.phtml
@@ -1,16 +1,10 @@
-<div 
-    class="<?= $this->wrapper_class ?>" 
-    data-on-document-ready="
-    <?= $this->wrapper_class ?>_focusEffect,
-   <?= ($this->required?$this->wrapper_class.'_required,':'') ?>
-   <?= $this->wrapper_class ?>_autosize
-    " 
-    >
+<div class="<?php echo $this->wrapper_class ?>" data-on-document-ready=" <?php echo $this->wrapper_class ?>_focusEffect, <?php echo ($this->required ? $this->wrapper_class . '_required,' : '') ?><?php echo $this->wrapper_class ?>_autosize">
     <textarea 
-           class="<?= $this->class ?>" 
-           placeholder="<?= $this->placeholder ?>" 
-           name="<?= $this->name ?>" 
-           <?= $this->customAttr ?> 
-           ><?= $this->value; ?></textarea>
-    <label class="active"><?= $this->label ?><?= ($this->required==true?' *':'') ?></label>
+        class="<?php echo $this->class ?>" 
+        placeholder="<?php echo $this->placeholder ?>" 
+        name="<?php echo $this->name ?>" 
+        <?php echo $this->customAttr ?> 
+        ><?php echo $this->value; ?>
+    </textarea>
+    <label class="active"><?php echo $this->label ?><?php echo ($this->required == true ? ' *' : '') ?></label>
 </div>
